--- a/.github/workflows/failingWorkflow.yml
+++ b/.github/workflows/failingWorkflow.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Add execute permission for ESLint
+        run: chmod +x ./node_modules/.bin/eslint
+
       # Add this step to list installed ESLint and confirm if it exists
       - name: Verify ESLint installation
         run: ls -la node_modules/.bin
