--- a/.github/workflows/failingWorkflow.yml
+++ b/.github/workflows/failingWorkflow.yml
@@ -34,6 +34,7 @@ jobs:
         run: npx eslint .
 
       - name: Save logs to a file
+        if: failure()
         run: |
           echo "Collecting logs..."
           # Redirecting stdout and stderr to a log file
