Now instead sending a logUrl which I can hopefully query with my api.

--- a/.github/workflows/failingWorkflow.yml
+++ b/.github/workflows/failingWorkflow.yml
@@ -40,7 +40,7 @@ jobs:
           curl -X POST https://your-webhook-url.com/endpoint \
           -H "Content-Type: application/json" \
           -d '{
-            "log": "'"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"'",
+            "logUrl": "'"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"'",
             "status": "failure",
             "repo": "'"${{ github.repository }}"'",
             "greptileKey": "'"${{ secrets.GREPTILE_KEY }}"'",
