--- a/.github/workflows/failingWorkflow.yml
+++ b/.github/workflows/failingWorkflow.yml
@@ -36,11 +36,10 @@ jobs:
       - name: Query Greptile On Failure
         if: failure()
         run: |
-          echo "Querying Greptile for failure ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           curl -X POST https://your-webhook-url.com/endpoint \
           -H "Content-Type: application/json" \
           -d '{
-            "logUrl": "'"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"'",
+            "logUrl": "'"/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}"'",
             "status": "failure",
             "repo": "'"${{ github.repository }}"'",
             "greptileKey": "'"${{ secrets.GREPTILE_KEY }}"'",
