--- a/.github/workflows/failingWorkflow.yml
+++ b/.github/workflows/failingWorkflow.yml
@@ -44,5 +44,6 @@ jobs:
             "status": "failure",
             "greptileKey": "'"${{ secrets.GREPTILE_KEY }}"'",
             "githubToken": "'"${{ secrets.GH_TOKEN }}"'"
+            "webhookUrl": "'"${{ secrets.WEBHOOK_URL }}"'"
           }'
       
