--- a/.github/workflows/failingWorkflow.yml
+++ b/.github/workflows/failingWorkflow.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run ESLint
         run: npx eslint .
 
-      - name: Query Greptile On Failure
+      - name: Query Greptile On Failure 1
         if: failure()
         run: |
           curl -X POST https://chic-tranquility-production.up.railway.app/debugger \
